--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -94,7 +94,7 @@
                     </ul>
                     <ul class="nav">
                         <li class="nav-item">
-                            <h:commandLink value="#{webContentController.findSingleText("sinhala")}" action="#{webContentController.makeLanguageSinhala}" class="nav-link link-dark px-2"></h:commandLink>
+                            <h:commandLink value="#{webContentController.findSingleText('sinhala')}" action="#{webContentController.makeLanguageSinhala}" class="nav-link link-dark px-2"/>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link link-dark px-2">Sign up</a>
