--- a/src/main/webapp/hr/hr_staff_paysheet_component_all.xhtml
+++ b/src/main/webapp/hr/hr_staff_paysheet_component_all.xhtml
@@ -28,7 +28,7 @@
                             </p:selectOneMenu>
                             <h:outputLabel value="From"/>                            
                             <p:calendar value="#{staffPaySheetComponentAllController.fromDate}" pattern="dd MM yyyy">
-                                <f:ajax execute="@this" render="#{p:component('frm')}" event="dateSelect"/>
+                                <f:ajax execute="@this" render="#{p:resolveFirstComponentWithId('frm',view).clientId}" event="dateSelect"/>
                             </p:calendar>
                             <h:outputLabel value="To"/>
                             <p:calendar value="#{staffPaySheetComponentAllController.toDate}" pattern="dd MM yyyy"/>
