--- a/src/main/webapp/hr/hr_staff_paysheet_component_all_performance_allovance.xhtml
+++ b/src/main/webapp/hr/hr_staff_paysheet_component_all_performance_allovance.xhtml
@@ -24,7 +24,7 @@
 
                             <h:outputLabel value="From"/>                            
                             <p:calendar  navigator="true" value="#{staffPaySheetComponentAllPerformanceAllowanceController.fromDate}" pattern="dd MM yyyy">
-                                <f:ajax execute="@this" render="#{p:component('frm')}" event="dateSelect"/>
+                                <f:ajax execute="@this" render="#{p:resolveFirstComponentWithId('frm',view).clientId}" event="dateSelect"/>
                             </p:calendar>
                             <h:outputLabel value="To"/>
                             <p:calendar navigator="true" value="#{staffPaySheetComponentAllPerformanceAllowanceController.toDate}" pattern="dd MM yyyy"/>
