--- a/src/main/webapp/store/store_retail_sale_bht.xhtml
+++ b/src/main/webapp/store/store_retail_sale_bht.xhtml
@@ -71,7 +71,7 @@
                                             <p:column >
                                                 <h:outputLabel value="#{apt2.patient.person.name}"/> 
                                             </p:column>
-                                            <p:ajax event="itemSelect" process="acPt2" update="#{p:component('gpDetail')}" />
+                                            <p:ajax event="itemSelect" process="acPt2" update="#{p:resolveFirstComponentWithId('gpDetail',view).clientId}" />
                                         </p:autoComplete>  
 
                                     </p:panel>
