--- a/src/main/webapp/opd_pre_bill.xhtml
+++ b/src/main/webapp/opd_pre_bill.xhtml
@@ -338,7 +338,7 @@
                                         <p:tab title="Refering Doctor">
                                             <p:autoComplete forceSelection="true" id="cmbDoc" value="#{opdPreBillController.referredBy}" completeMethod="#{doctorController.completeDoctor}" var="ix" itemLabel="#{ix.person.name}" itemValue="#{ix}" size="30"  style="width: 400px;">
                                             </p:autoComplete>
-                                            <p:commandButton id="btnAddNewDoc" type="button" value="Add New Doctor" onclick="dlg.show();" actionListener="#{doctorController.prepareAdd}" process="btnAddNewDoc" update="#{p:component('panDoc')}" />  
+                                            <p:commandButton id="btnAddNewDoc" type="button" value="Add New Doctor" onclick="dlg.show();" actionListener="#{doctorController.prepareAdd}" process="btnAddNewDoc" update="#{p:resolveFirstComponentWithId('panDoc',view).clientId}" />  
 
                                         </p:tab>
                                         <p:tab title="Credit" >
