--- a/src/main/webapp/admin_user_login.xhtml
+++ b/src/main/webapp/admin_user_login.xhtml
@@ -10,7 +10,7 @@
     <h:body>
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
-                <h:panelGroup rendered="#{!webUserController.hasPrivilege('AdminManagingUsers')}" >
+                <h:panelGroup rendered="#{webUserController.hasPrivilege('AdminManagingUsers') or sessionController.firstLogin }" >
                     <h:outputLabel value="You are NOT authorized"/>
                 </h:panelGroup>
 
