--- a/src/main/webapp/admin_user_privilages.xhtml
+++ b/src/main/webapp/admin_user_privilages.xhtml
@@ -14,7 +14,7 @@
 
             <ui:define name="content">
                 <h:form  >
-                    <h:panelGroup  rendered="#{!webUserController.hasPrivilege('AdminManagingUsers')}"  >
+                    <h:panelGroup  rendered="#{webUserController.hasPrivilege('AdminManagingUsers') or sessionController.firstLogin }"  >
                         <p:outputLabel value="YOU ARE NOT AUTHERIZED." ></p:outputLabel>
                     </h:panelGroup>
                     <p:panelGrid columns="2"  rendered="#{webUserController.hasPrivilege('AdminManagingUsers')}" >                   
