API for inpatients Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/inward/inward_bill_intrim.xhtml
+++ b/src/main/webapp/inward/inward_bill_intrim.xhtml
@@ -52,7 +52,9 @@
                                         <h:outputLabel value="Discharged"  rendered="#{myItem.discharged}"/>
                                     </p:column>
                                 </p:autoComplete>   
-                                <p:commandButton ajax="false"  style="width: 10em;" value="Display Details" action="#{bhtSummeryController.createTables()}" >
+                                <p:commandButton ajax="false"  style="width: 10em;" 
+                                                 value="Display Details" 
+                                                 action="#{bhtSummeryController.createTables()}" >
                                 </p:commandButton>
                                 <p:spacer height="1" width="15" ></p:spacer>
 
