--- a/src/main/webapp/lab/investigation_item_value_path.xhtml
+++ b/src/main/webapp/lab/investigation_item_value_path.xhtml
@@ -36,7 +36,7 @@
                                                  update="@form"
                                                  value="Save Template" action="#{investigationItemController.saveTemplate()}" ></p:commandButton>
                             </p:panelGrid>
-                            <p:textEditor id="editor" value="#{investigationItemController.current.htmltext}" widgetVar="editor" height="650" style="height: 90%;min-height: 650px;"
+                            <p:textEditor secure="false" id="editor" value="#{investigationItemController.current.htmltext}" widgetVar="editor" height="650" style="height: 90%;min-height: 650px;"
                                       rendered="#{investigationItemController.current ne null}" ></p:textEditor>
                            
                         </h:panelGroup>
