--- a/src/main/webapp/bill_all_view.xhtml
+++ b/src/main/webapp/bill_all_view.xhtml
@@ -281,10 +281,7 @@
                                              editable="true" value="#{billSearch.billFeesList}" var="bip" >
                                     <p:ajax event="rowEdit" listener="#{billSearch.onEdit}" />  
                                     <p:ajax event="rowEditCancel" listener="#{billSearch.onEdit}" />  
-                                    <p:column>
-                                        <f:facet name="header">No</f:facet>
-                                        <h:outputLabel value="#{rowIndex+1}"/>
-                                    </p:column>
+                                    
                                     <p:column style="width:6%">  
                                         <p:rowEditor rendered="#{webUserController.hasPrivilege('Developers')}"> 
                                         </p:rowEditor>
@@ -455,35 +452,37 @@
                                     <p:tab title="View" >
                                         <p:commandButton ajax="false" value="download" 
                                                          >
-
                                             <p:dataExporter target="tblBillItems" type="xls" fileName="ill items" ></p:dataExporter>
                                         </p:commandButton>
+                                        <p:commandButton ajax="false" value="Update" ></p:commandButton>
                                         <p:dataTable value="#{billSearch.billItemList}"
                                                      id="tblBillItems"
+                                                     resizableColumns="true"
                                                      var="bip21" rowIndexVar="rowIndex">
                                             <p:ajax event="rowEdit" listener="#{billSearch.onEditItem}" />  
                                             <p:ajax event="rowEditCancel" listener="#{billSearch.onEditItem}" /> 
-                                            <p:column>
+<!--                                            <p:column>
                                                 <f:facet name="header">No</f:facet>
                                                 <h:outputLabel value="#{rowIndex+1}"/>
+                                            </p:column>-->
+                                            <p:column headerText="ID">
+                                                <h:outputLabel value="#{bip21.id}" />
                                             </p:column>
-                                            <p:column headerText="Bill">
-                                                <h:outputLabel value="#{bip21.bill.deptId} - " />
-                                                <h:outputLabel value="#{bip21.bill.id}" />
-                                            </p:column>
-                                            <p:column headerText="Ref">
-                                                <h:outputLabel value="#{bip21.paidForBillFee.bill.billType}" />
-                                            </p:column>
-                                            <p:column headerText="bill edit">
-
+<!--                                            <p:column headerText="Dept ID of Bill">
                                                 <h:outputLabel value="#{bip21.bill.deptId}" />
-
                                             </p:column>
+                                            <p:column headerText="Ins ID of Bill ">
+                                                <h:outputLabel value="#{bip21.bill.insId}" />
+                                            </p:column>
+                                            <p:column headerText="Bill Type">
+                                                <h:outputLabel value="#{bip21.paidForBillFee.bill.billType}" />
+                                            </p:column>-->
+                                            
                                             <p:column headerText="Bill paid">
                                                 <h:outputLabel value="#{bip21.bill.billedBill.paidBill.cancelledBill.deptId} - " />
                                                 <h:outputLabel value="#{bip21.bill.billedBill.paidBill.cancelledBill.id}" />
                                             </p:column>
-                                            <p:column headerText="BillItem Id">
+                                            <p:column headerText="Bill Item Id">
                                                 <h:outputLabel value="#{bip21.id}" />
                                             </p:column>
                                             <p:column headerText="Ref. Bill Id">
@@ -500,14 +499,14 @@
                                                 <f:facet name="header">Inward Category</f:facet>
                                                 <h:outputLabel value="#{bip21.inwardChargeType.label}"/>
                                             </p:column>
-                                            <p:column headerText="1">
+<!--                                            <p:column headerText="1">
                                                 <h:outputLabel value="#{bip21.paidForBillFee.feeValue}" rendered="#{bip21.paidForBillFee ne null}"/>
                                             </p:column>
                                             <p:column headerText="2" >
 
                                                 <h:outputLabel value="#{bip21.paidForBillFee.paidValue}" />
 
-                                            </p:column>
+                                            </p:column>-->
                                             <p:column headerText="Test/Service">
                                                 <h:outputLabel value="#{bip21.paidForBillFee.billItem.item.name}" />
                                             </p:column>
