--- a/src/main/webapp/channel/report_cashier_summery_all.xhtml
+++ b/src/main/webapp/channel/report_cashier_summery_all.xhtml
@@ -120,7 +120,7 @@
                         <p:columnGroup type="footer">
                             <p:row>
 
-                                <p:column footerText="Grant Total">
+                                <p:column footerText="Grand Total">
 
                                 </p:column>
 
