--- a/src/main/webapp/channel/report_cashier_vise_count_1.xhtml
+++ b/src/main/webapp/channel/report_cashier_vise_count_1.xhtml
@@ -138,7 +138,7 @@
                         <p:columnGroup type="footer">
                             <p:row>
 
-                                <p:column footerText="Grant Total">
+                                <p:column footerText="Grand Total">
 
                                 </p:column>
 
@@ -277,7 +277,7 @@
                         <p:columnGroup type="footer">
                             <p:row>
 
-                                <p:column footerText="Grant Total">
+                                <p:column footerText="Grand Total">
 
                                 </p:column>
 
