--- a/src/main/webapp/reportCashier/report_cashier_summery_all_total_only_without_pro.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_summery_all_total_only_without_pro.xhtml
@@ -124,7 +124,7 @@
                         <p:columnGroup type="footer">
                             <p:row>
 
-                                <p:column footerText="Grant Total">
+                                <p:column footerText="Grand Total">
 
                                 </p:column>
 
