Signed-off-by: buddhika <buddhika@vm1.asia-southeast1-b.c.openhmis.internal>

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -55,6 +55,9 @@
     </h:head>
 
     <h:body>
+        <h1>Has Front End</h1>
+        
+        #{applicationController.hasAwebsiteAsFrontEnd}
 
         <ez:webindex rendered="#{applicationController.hasAwebsiteAsFrontEnd}"/>       
 
